<resources>
    <string name="app_name">Boogle: Book Search Engine </string>
    <string name="book_search">Search Books</string>
    <string name="read_books">Already Read</string>
    <string name="wish_list">Wish List</string>
    <string name="book_details">Book Details</string>
    <string name="book_title">Book Title: </string>
    <string name="author">Author:</string>
    <string name="description">Description</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="add_to_read_list">Add to Read List</string>
    <string name="go_back">Go back</string>
    <string name="search_for_a_book">Search for a book</string>
</resources>